 * AbstractedFS class changes:
   * normalize method has been renamed in "ftpnorm".
   * translate method has been renamed in "ftp2fs".
   * New methods: fs2ftp, stat, lstat, islink, realpath, lexists, validpath.
   * get_list_dir, get_stat_dir and format_list methods now return an iterator
     object instead of a string.
   * format_list method has a new "ignore_err" keyword argument.


Version: 0.2.0 - Date: 2007-09-17
----------------------------------

Major enhancements:

 * Issue #5: provided a way to configure / limit the number of maximum
   acceptable connections.
 * Issue #5: provided a way to configure / limit the maximum number of clients
   which may be connected from the same IP address.
 * Issue #36: added support for FXP site-to-site transfer to allow transfers 
   between FTP servers.
 * Issue #39: added NAT/Firewall support with PASV (passive) mode connections
   for FTP servers behind NAT.
 * Issue #40: provided new FTPHandler.passive_ports attribute to control what
   ports to use for passive data-transfers.

RFC-related enhancements:

 * Issue #6: accept and process TYPE AN and TYPE L8 commands.
 * Issue #7: a new USER command can now be entered at any point to begin the
   login sequence again.
 * Issue #8: be compliant with STOU output format defined in RFC 1123.
 * Issue #10: HELP command arguments are now accepted.
 * Issue #12: 554 error response is now returned on RETR/STOR if REST fails.
 * Issue #15: STAT used with an argument return directory LISTing over the
   command channel.

Security enhancements:

 * Issue #3: stop buffering when extremely long lines are received.
 * Issue #11: reject data connection when a privileged port is specified on
   PORT command.
 * Issue #25: limit the number of attempts to find a unique filename for
   STOU command.

Usability enhancements:

 * Provided an overridable attribute to easily set number of maximum login
   attempts before disconnecting.