@@ -46,3 +46,4 @@
    * New methods: `fs2ftp`, `stat`, `lstat`, `islink`, `realpath`, `lexists`, `validpath`.
    * `get_list_dir`, `get_stat_dir` and `format_list` methods now return an iterator object instead of a string.
    * `format_list` method has a new "ignore_err" keyword argument.
+ * global `debug` function has been removed.
